--- a/项目副本/1home.css
+++ b/项目副本/1home.css
@@ -8,74 +8,53 @@
 	/*text-align: center;*/
 }
 /*图1*/
-.center1{
+.center{
 	width: 980px;
 	height: 160px;
 	margin: 0 auto;
 }
-.center1_left {
+.center_img {
+	position: relative;
 	width: 588px;
 	height: 158px;
-	float: left;
 }
-.center1_left img{
+.center_img img{
 	width: 100%;
 	height: 100%;
 }
-.tiao1{
-	width: 20px;
-	height: 158px;
-	background-color: darkgray;
-	float: left;
-}
-.center1_right{
+.center_text{
 	width: 330px;
 	height: 158px;
-	float: left;
 	padding-left: 15px;
 }
-.center1_right a{
+.center_text a{
 	text-decoration: none;
 	color: black;
 }
-.center1_right p{
+.center_text p{
 	line-height: 1.8em;
 	font-size: 15px;
 }
-/*图2*/
-.center2{
-	width: 980px;
-	height: 158px;
-    overflow: hidden;
-}
-.center2_right {
-	width: 588px;
-	height: 158px;
-	float: right;
-}
-.center2_right img{
-	height: 158px;
-}
-.tiao2{
+
+
+.tiao{
 	width: 20px;
 	height: 158px;
 	background-color: darkgray;
+}
+.fr{
 	float: right;
+}	
+.fl{
+		float: left;
+
 }
-.center2_left{
-	width: 330px;
-	height: 158px;
-	float: right;
+.change{
+	background-color: greenyellow;
 }
-.center2_left a{
-	text-decoration: none;
-	color: black;
-}
-.center2_left p{
-	line-height: 1.8em;
-	font-size: 15px;
-}
-#tu1,
+
+
+/*#tu1,
 #tu2,
 #tu3:hover {
 	-webkit-transition: all 4s linear;
@@ -84,47 +63,13 @@
 	-o-transition: all 4s linear;
 	transition: all 4s linear;
 }
-.tiao3{
-	width: 20px;
-	height: 158px;
-	background-color: darkgray;
-	float: left;
-}
-/*图片2变颜色*/
-.center2_left{
-	position: relative;
-}
-.t2{
-	position: absolute;
-	opacity: 1;
+*/
 
-}
-.t2_2{
-	position: absolute;
-	opacity: 0;
-}
-/*图片3变颜色*/
-.center3_left{
-	position: relative;
-}
-.t3{
+.ht{
 	position: absolute;
 	opacity: 1;
 }
-.t3_3{
-	position: absolute;
-	opacity: 0;
-}
-/*图片1变颜色*/
-.center1_left{
-	position: relative;
-}
-.t1{
-	position: absolute;
-	opacity: 1;
-
-}
-.t1_1{
+.ct{
 	position: absolute;
 	opacity: 0;
 }
