--- a/0811js初级/angular/douban/app.css
+++ b/0811js初级/angular/douban/app.css
@@ -103,19 +103,27 @@ body {
     display: inline-block;
     border-radius: 50%;
 }
+.tou{
+    overflow: hidden;
+}
 .tou>li{
+    width: 1000px;
+    height: 300px;
    border: 1px solid gainsboro;
 
 }
 ul li{
-    list-style-type:none
+    list-style-type:none;
+
 }
 .tou img{
     margin: 20px;
+    float: left;
 }
-/*li p{*/
-    /*display: inline;*/
-/*}*/
-/*img,p{*/
-    /*display: inline-block;*/
-/*}*/
+.zi{
+    padding-top: 50px;
+    font-size:20px ;
+    float: left;
+}
+
+
